Updated SkinTranslate.exe utility to be more strict. Updated translations.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9667 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-ar.xml
+++ b/Languages/default-ar.xml
@@ -1780,7 +1780,7 @@
 					<newline gap="4"/>
 				</group>
 				<link id="DownloadsNone" format="bu" target="raza:command:ID_VIEW_DOWNLOADS">اذهب الى مكتبة الملفات</link>
-				<link id="DownloadsOne" format="bu" target="raza:command:ID_VIEW_DOWNLOADS">اذهب الى مكتبة الملفات (%i)</link>
+				<link id="DownloadsOne" format="bu" target="raza:command:ID_VIEW_DOWNLOADS">Go to Download (1)</link>
 				<link id="DownloadsMany" format="bu" target="raza:command:ID_VIEW_DOWNLOADS">Go to Downloads (%i)</link>
 			</para>
 		</document>
