--- a/Languages/default-sr.xml
+++ b/Languages/default-sr.xml
@@ -1804,7 +1804,7 @@
 				<link format="bu" target="raza:shell:downloads">Open my Downloads folder</link>
 				<group id="1">
 					<newline gap="8"/>
-					<text>%lu</text>
+					<text>Shareaza is scanning and processing</text>
 					<text id="LibraryHashRemaining" format="b">%lu</text>
 					<text>files.</text>
 					<newline gap="8"/>
@@ -2803,7 +2803,7 @@
 		<string id="8179" value="(Očisti predjašnje potrage)"/>
 		<string id="8180" value="Veličina datoteke mora biti"/>
 		<string id="8181" value=" to (size from xx TO xx)"/>
-		<string id="8208" value="Shareaza stvara hashes za %i datoteka:"/>
+		<string id="8208" value="Shareaza is creating hashes for %Iu file(s):"/>
 		<string id="8223" value="%i dana i %i sati"/>
 		<string id="8224" value="Shareaza skida:"/>
 		<string id="8225" value="Ovo skidanje je pauzirano"/>
