--- a/Languages/default-fi.xml
+++ b/Languages/default-fi.xml
@@ -1804,7 +1804,7 @@
 				<link format="bu" target="raza:shell:downloads">Open my Downloads folder</link>
 				<group id="1">
 					<newline gap="8"/>
-					<text>%lu</text>
+					<text>Shareaza is scanning and processing</text>
 					<text id="LibraryHashRemaining" format="b">%lu</text>
 					<text>files.</text>
 					<newline gap="8"/>
